# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Tests-and-linter.yml  github-actions.yml
gendiff/: __init__.py  ast_builder.py  generate_difference.py  generator.py  parser.py  search_difference.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: expected.py  test_basics.py  test_gendiff.py  test_generate_difference.py  test_json_diff.py  test_plain.py  test_search_difference.py  test_stylish.py  test_yaml_diff.py
tests/fixtures/: complex_after.yaml  complex_before.yaml  complex_json.txt  complex_stylish.txt  expectation_json.txt  expected.py  file_2_1.json  simple_json.txt
