[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Second project. Generate difference JSON/YAML files"
classifiers = ["Programming language :: Python :: 3.8"]
authors = ["Alexander Potapkov <xanben@mail.ru>"]
repository = "https://github.com/AlexanderPotapkov/python-project-lvl2"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
